--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,10 @@
 # Check https://circleci.com/docs/2.0/language-ruby/ for more details
 #
 version: 2
+dependencies:
+  pre:
+    - sudo apt-get install libgmp3-dev
+
 general:
   branches:
     only:
