--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,6 @@
 # Check https://circleci.com/docs/2.0/language-ruby/ for more details
 #
 version: 2
-dependencies:
-  pre:
-    - sudo apt-get install libgmp3-dev
-
 general:
   branches:
     only:
@@ -38,8 +34,10 @@ jobs:
 
       - run:
           name: install dependencies
+          working_directory: ~/repo/rubyonrails/notejam
           command: |
-            cd rubyonrails/notejam && bundle install --jobs=4 --retry=3 --path vendor/bundle
+            sudo apt-get install -y libgmp3-dev && \
+            bundle install --jobs=4 --retry=3 --path vendor/bundle
 
       - save_cache:
           paths:
