--- a/rubyonrails/notejam/Gemfile
+++ b/rubyonrails/notejam/Gemfile
@@ -1,5 +1,8 @@
 source 'https://rubygems.org'
 
+# Requisites
+gem 'json', '1.8.3'
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.5'
 
